{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 103,
  "lineage": "15cf84e7-0922-50f3-5de5-02650b7f093d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my-test-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:966073711270:loadbalancer/app/my-test-lb/27e1795dabd4bcea",
            "arn_suffix": "app/my-test-lb/27e1795dabd4bcea",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-test-lb-1813840282.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:966073711270:loadbalancer/app/my-test-lb/27e1795dabd4bcea",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-test-lb",
            "security_groups": [
              "sg-05cd55341b2145985"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05c44ccdc8bb00495"
              },
              {
                "subnet_id": "subnet-073e48861cf2c339f"
              }
            ],
            "subnets": [
              "subnet-05c44ccdc8bb00495",
              "subnet-073e48861cf2c339f"
            ],
            "vpc_id": "vpc-03a65568a160c471c",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my-alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:966073711270:targetgroup/my-alb-tg/e2759666c7948301",
            "arn_suffix": "targetgroup/my-alb-tg/e2759666c7948301",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:966073711270:targetgroup/my-alb-tg/e2759666c7948301",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "my-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03a65568a160c471c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "my-tg-attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:966073711270:targetgroup/albtargetgroup/c95ecdc82caef941-20220323142049277400000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:966073711270:targetgroup/albtargetgroup/c95ecdc82caef941",
            "target_id": "i-09219ed792259f71f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:966073711270:security-group/sg-0c6ee0f88380f0001",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c6ee0f88380f0001",
            "ingress": [],
            "name": "my-alb-sg",
            "name_prefix": "",
            "owner_id": "966073711270",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03a65568a160c471c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-612312026",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05a5c5e3f788c9fe8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}